syntax = "proto3";

package gitaly;

import "lint.proto";
import "shared.proto";

option go_package = "gitlab.com/gitlab-org/gitaly/v16/proto/go/gitalypb";

// CleanupService provides RPCs to clean up a repository's contents.
service CleanupService {

  // ApplyBfgObjectMapStream ...
  rpc ApplyBfgObjectMapStream(stream ApplyBfgObjectMapStreamRequest) returns (stream ApplyBfgObjectMapStreamResponse) {
    option (op_type) = {
      op: MUTATOR
    };
  }

}

// ApplyBfgObjectMapStreamRequest ...
message ApplyBfgObjectMapStreamRequest {
  // repository ...
  // Only available on the first message
  Repository repository = 1 [(target_repository)=true];

  // object_map is a raw object-map file as generated by BFG: https://rtyley.github.io/bfg-repo-cleaner
  // Each line in the file has two object SHAs, space-separated - the original
  // SHA of the object, and the SHA after BFG has rewritten the object.
  bytes object_map = 2;
}

// ApplyBfgObjectMapStreamResponse ...
message ApplyBfgObjectMapStreamResponse {
  // Entry refers to each parsed entry in the request's object map so the client
  // can take action.
  message Entry {
    // type ...
    ObjectType type = 1;
    // old_oid ...
    string old_oid = 2;
    // new_oid ...
    string new_oid = 3;
  }

  // entries ...
  repeated Entry entries = 1;
}
